test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/14.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:e785a67d3d9179f597a10f20e792d23095f520de0d7023bd15885f171bd9044a
size 4560251
